# fabo_moveit_gazebo

./: .gitignore
ASLAM_gazebo_world/: CMakeLists.txt
ASLAM_gazebo_world/launch/: hokuyo_kinectv1_bringup_moveit.launch  hokuyo_kinectv1_bringup_moveit_onlyrobot.launch  hokuyo_kinectv1_bringup_moveit_twodesk.launch
ASLAM_gazebo_world/urdf/: hokuyo.urdf.xacro  kinect.urdf.xacro  kinectv1_neck.urdf.xacro  robot_hokuyo_kinectv1neck.urdf.xacro  test_robot.urdf.xacro  test_robot_body.urdf.xacro
fabo_gazebo_navigation/launch/: fake_navigation.launch
fabo_gazebo_navigation/maps/: fabo_test.pgm
fabo_robot_gazebo/: CMakeLists.txt  package.xml
fabo_robot_gazebo/launch/: blueteech_with_movebase_gazebo.launch  fake_move_base.launch  fake_navigation.launch  move_base.launch
fabo_robot_gazebo/maps/: fabo_test.yaml
my_gazebo/: CMakeLists.txt  package.xml
my_gazebo/launch/: hokuyo_kinectv1_bringup_moveit.launch  hokuyo_kinectv1_bringup_moveit_onlyrobot.launch  hokuyo_kinectv1_bringup_moveit_twodesk.launch  localization_navigation.launch  mobilearm_bringup_moveit.launch  test_mobilearm_bringup_moveit.launch
my_gazebo/map/: 1.yaml.pgm  1.yaml.yaml  4.yaml  map.yaml
my_gazebo/urdf/: hokuyo.urdf.xacro  kinect.urdf.xacro  kinectv1_neck.urdf.xacro  robot_hokuyo_kinectv1neck.urdf copy.xacro  robot_hokuyo_kinectv1neck.urdf.xacro  test_robot.urdf.xacro  test_robot_body.urdf.xacro  test_robot_rplidar_neck.xacro
my_gazebo/world/: nine_highdesk.world  twodesk (another copy).world
robot_hokuyo_kinectv1neck/: .setup_assistant  package.xml
test_mobilearm_moveit_config/: .setup_assistant  package.xml
(+10 files in other folders)
